traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: ';' expected but '=' found.
      (gauche,cote) = posSuivante(gauche,cote)
                    ^